--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles.css" />
     <link
       rel="icon"
       type="image/png"
@@ -26,9 +32,17 @@
     </style>
   </head>
   <body>
+    <div class="background">
+      <img class="circle-top" src="./images/bg-pattern-top.svg" alt="" />
+      <img class="circle-bottom" src="./images/bg-pattern-bottom.svg" alt="" />
+    </div>
     <main class="card">
-      <div class="background-top">
-        <img src="./images/bg-pattern-card.svg" alt="Blue dots light" />
+      <div>
+        <img
+          class="card-background-top"
+          src="./images/bg-pattern-card.svg"
+          alt="Blue dots light"
+        />
       </div>
       <section class="profile">
         <img
@@ -45,11 +59,20 @@
       <hr />
 
       <section class="status">
-        <div class="status-followers">80K Followers</div>
+        <div class="status-details">
+          <p class="status-number">80K</p>
+          <p class="status-legend">Followers</p>
+        </div>
 
-        <div class="status-likes">803K Likes</div>
+        <div class="status-details">
+          <p class="status-number">803K</p>
+          <p class="status-legend">Likes</p>
+        </div>
 
-        <div class="status-photos">1.4K Photos</div>
+        <div class="status-details">
+          <p class="status-number">1.4K</p>
+          <p class="status-legend">Photos</p>
+        </div>
       </section>
     </main>
     <footer class="attribution">
