--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
     </style>
   </head>
   <body>
-    <div class="background">
-      <img class="circle-top" src="./images/bg-pattern-top.svg" alt="" />
-      <img class="circle-bottom" src="./images/bg-pattern-bottom.svg" alt="" />
-    </div>
+    <header class="background">
+      <img class="circle-top" src="./images/bg-pattern-top.svg" />
+      <img class="circle-bottom" src="./images/bg-pattern-bottom.svg" />
+    </header>
     <main class="card">
       <div>
         <img
@@ -60,17 +60,17 @@
 
       <section class="status">
         <div class="status-details">
-          <p class="status-number">80K</p>
+          <h2 class="status-number">80K</h2>
           <p class="status-legend">Followers</p>
         </div>
 
         <div class="status-details">
-          <p class="status-number">803K</p>
+          <h2 class="status-number">803K</h2>
           <p class="status-legend">Likes</p>
         </div>
 
         <div class="status-details">
-          <p class="status-number">1.4K</p>
+          <h2 class="status-number">1.4K</h2>
           <p class="status-legend">Photos</p>
         </div>
       </section>
