--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   </head>
   <body>
     <header class="background">
-      <img class="circle-top" src="./images/bg-pattern-top.svg" />
-      <img class="circle-bottom" src="./images/bg-pattern-bottom.svg" />
+      <img class="circle-top" src="./images/bg-pattern-top.svg" alt="" />
+      <img class="circle-bottom" src="./images/bg-pattern-bottom.svg" alt="" />
     </header>
     <main class="card">
       <div>
